--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Weather App</title>
-    <link rel="stylesheet" href="/jsexample/weatherapp/index.css">
+    <link rel="stylesheet" href="/index.css">
 </head>
 <body>
     <div class="container">
@@ -29,5 +29,5 @@
        </div>
     </div>
 </body>
-<script src="/jsexample/weatherapp/index.js"></script>
+<script src="/index.js"></script>
 </html>
